GUI - panel for crawler

--- a/src/main/resources/cz/mefi100feles/jkuuza/app/resources/AppView.properties
+++ b/src/main/resources/cz/mefi100feles/jkuuza/app/resources/AppView.properties
@@ -30,3 +30,20 @@ StatusBar.busyIcons[11] = busyicons/busy-icon11.png
 StatusBar.busyIcons[12] = busyicons/busy-icon12.png
 StatusBar.busyIcons[13] = busyicons/busy-icon13.png
 StatusBar.busyIcons[14] = busyicons/busy-icon14.png
+jpCrawler.TabConstraints.tabTitle=Crawler
+jtaCrawlerConsole.text=Crawler starting..\n\nline 1\ntest \nlorem ipsum
+#NOI18N
+jtaCrawlerConsole.foreground=166, 184, 24
+#NOI18N
+jtaCrawlerConsole.font=Ubuntu-Plain-12
+#NOI18N
+jtaCrawlerConsole.background=61, 102, 59
+jtaCrawlerDescription.text=Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at vulputate augue. In tempor hendrerit lorem ultricies posuere.\n
+#NOI18N
+jtaCrawlerDescription.background=247, 246, 246
+jbtCrawlertAddUrls.text=P\u0159idat
+jbtCrawlerRemoveUrls.text=Odstranit
+jbtCrawlerAddUrlsFromFile.text=Ze Souboru
+jbtCrawlerRun.text=Spustit
+#NOI18N
+jbtCrawlerRun.font=Ubuntu-Bold-15
