Better FlashMessages panel, new ones now displays on top

--- a/src/main/resources/cz/mefi100feles/jkuuza/app/resources/AppView.properties
+++ b/src/main/resources/cz/mefi100feles/jkuuza/app/resources/AppView.properties
@@ -52,6 +52,6 @@ loadCrawlerUrlsFromFile.Action.shortDescription=
 jtaCrawlerFlashMessages.text=Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at vulputate augue. In tempor hendrerit lorem ultricies posuere.\n
 #NOI18N
 jtaCrawlerFlashMessages.background=247, 246, 246
-jlbClearFlashMessages.text=smazat
+jlbClearFlashMessages.text=x
 #NOI18N
 jlbClearFlashMessages.font=Ubuntu-Plain-10
