--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.5.2</version>
 		</dependency>
+		<dependency>
+			<groupId>unknown.binary</groupId>
+			<artifactId>AbsoluteLayout</artifactId>
+			<version>SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
