Simple Niocchi crawler implementation with ExtendableURLPool and links extraction.

--- a/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
+++ b/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
@@ -55,3 +55,5 @@ jtaCrawlerFlashMessages.background=247, 246, 246
 jlbClearFlashMessages.text=x
 #NOI18N
 jlbClearFlashMessages.font=Ubuntu-Plain-10
+runCrawler.Action.text=
+runCrawler.Action.shortDescription=
