--- a/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
+++ b/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
@@ -34,7 +34,7 @@ FlashMessage.flashIcons[SUCCESS] = flashicons/success.png
 FlashMessage.flashIcons[ERROR] = flashicons/error.png
 FlashMessage.flashIcons[INFO] = flashicons/info.png
 jpCrawler.TabConstraints.tabTitle=Crawler
-jtaCrawlerConsole.text=Crawler starting..\n\nline 1\ntest \nlorem ipsum
+jtaCrawlerConsole.text=
 #NOI18N
 jtaCrawlerConsole.foreground=166, 184, 24
 #NOI18N
