Dialog for adding URLs to crawler, deleting of URLs

--- a/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
+++ b/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
@@ -41,7 +41,6 @@ jtaCrawlerConsole.foreground=166, 184, 24
 jtaCrawlerConsole.font=Ubuntu-Plain-12
 #NOI18N
 jtaCrawlerConsole.background=61, 102, 59
-jbtCrawlertAddUrls.text=P\u0159idat
 jbtCrawlerRemoveUrls.text=Odstranit
 jbtCrawlerAddUrlsFromFile.text=Ze Souboru
 jbtCrawlerRun.text=Spustit
@@ -57,3 +56,13 @@ jlbClearFlashMessages.text=x
 jlbClearFlashMessages.font=Ubuntu-Plain-10
 runCrawler.Action.text=
 runCrawler.Action.shortDescription=
+jtfCrawlerAddUrl.text=http://
+jlbCrawlerAddUrlDialog.text=Url:
+jbtCrawlerAddUrl.text=P\u0159idat
+loadCrawlerUrlFromDialog.Action.shortDescription=
+loadCrawlerUrlFromDialog.Action.text=
+showCrawlerUrlDialog.Action.text=
+showCrawlerUrlDialog.Action.shortDescription=
+removeSelectedUrlFromCrawlerQueue.Action.shortDescription=
+removeSelectedUrlFromCrawlerQueue.Action.text=
+jbtShowAddCrawlerUrlDialog.text=P\u0159idat
