Added forgotten AppView.properties

--- a/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
+++ b/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
@@ -66,3 +66,54 @@ showCrawlerUrlDialog.Action.shortDescription=
 removeSelectedUrlFromCrawlerQueue.Action.shortDescription=
 removeSelectedUrlFromCrawlerQueue.Action.text=
 jbtShowAddCrawlerUrlDialog.text=P\u0159idat
+jpAnalyzer.TabConstraints.tabTitle=Analyzer
+jlbAnalyzerStep.text=Krok 1/3
+jbtAnalyzerStepPrev.text=< ZP\u011aT
+jbtAnalyzerStepNext.text=D\u00c1LE >
+prevAnalyzerStep.Action.text=
+prevAnalyzerStep.Action.shortDescription=
+nextAnalyzerStep.Action.shortDescription=
+nextAnalyzerStep.Action.text=
+jbtAnalyzerStepPrev.toolTipText=Krok zp\u011bt
+jbtAnalyzerStepNext.toolTipText=N\u00e1sleduj\u00edc\u00ed krok
+jtaAnalyzerStep2TopDescription.text=Zde vytvo\u0159te pravidla pro detekci dokument\u016f. Dokument mus\u00ed splnit v\u0161echna pravidla, aby byl p\u0159ed\u00e1n k extrahov\u00e1n\u00ed obsahu.
+jbtAnalyzerStep2TopAddComponent.text=P\u0159idat
+addNextReflectorComponent.Action.text=
+addNextReflectorComponent.Action.shortDescription=
+jbtAnalyzerStep2RemoveLast.text=Odstranit posledn\u00ed
+removeLastReflectorComponent.Action.text=
+removeLastReflectorComponent.Action.shortDescription=
+previewProductExtraction.Action.text=
+previewProductExtraction.Action.shortDescription=
+jlbAnalyzerStep3ProductName.text=N\u00e1zev v\u00fdrobku:
+jtfAnalyzerStep3ProductName.text=
+jlbAnalyzerStep3ProductPrice.text=Cena:
+jtfAnalyzerStep3ProductPrice.text=
+jtfAnalyzerStep3ProductDescription.text=
+jlbAnalyzerStep3ProductDescription.text=Popis v\u00fdrobku:
+jtfAnalyzerStep2Url.text=http://
+jlbAnalyzerStep2Url.text=URL:
+jlbAnalyzerStep2Preview.text=N\u00e1hled
+jtfAnalyzerStep2PreviewDescription.text=Aplikuje pravidla na tuto url a zobraz\u00ed v\u00fdsledek
+previewProductAnalyzing.Action.text=
+previewProductAnalyzing.Action.shortDescription=
+jlbAnalyzerStep3ProductParameterName.text=N\u00e1zvy parametr\u016f:
+jtfAnalyzerStep3ProductParameterName.text=
+jlbAnalyzerStep3ProductParameterValue.text=Hodnoty parametr\u016f:
+jtfAnalyzerStep3ProductParameterValue.text=
+#NOI18N
+jtaAnalyzerStep3Description.background=254, 254, 254
+jtaAnalyzerStep3Description.text=Zde vytvo\u0159te pravidla pro extrakci produktu. Je mo\u017en\u00e9 pou\u017e\u00edvat syntaxi CSS nebo JQuery selektor\u016f.\nP\u0159ehled selektor\u016f najdete <a href="http://jsoup.org/cookbook/extracting-data/selector-syntax">zde</a>.
+jtaAnalyzerStep3Description.contentType=text/html
+jtfAnalyzerStep3Url.text=http://
+jlbAnalyzerStep3Url.text=URL:
+jtfAnalyzerStep3Preview.text=N\u00e1hled
+jtfAnalyzerStep3PreviewDescription.text=Zobraz\u00ed n\u00e1hled vyextrahovan\u00fdch v\u00fdsledk\u016f
+jTextArea1.text=text\ntext
+jlbAnalyzerStep1Sample.text=Na\u010d\u00edst vzorov\u00e1 pravidla
+jtfAnalyzerStep3ProductPriceDPH.text=
+jlbAnalyzerStep3ProductPriceDPH.text=Cena s DPH:
+#NOI18N
+jlbAnalyzerStep3ProductName.font=Ubuntu-Bold-15
+#NOI18N
+jlbAnalyzerStep3ProductPrice.font=Ubuntu-Bold-15
