Rules refactoring - now uses Map to store properties names and their selectors

--- a/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
+++ b/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
@@ -103,7 +103,7 @@ jlbAnalyzerStep3ProductParameterValue.text=Hodnoty parametr\u016f:
 jtfAnalyzerStep3ProductParameterValue.text=
 #NOI18N
 jtaAnalyzerStep3Description.background=254, 254, 254
-jtaAnalyzerStep3Description.text=Zde vytvo\u0159te pravidla pro extrakci produktu. Je mo\u017en\u00e9 pou\u017e\u00edvat syntaxi CSS nebo JQuery selektor\u016f.\nP\u0159ehled selektor\u016f najdete <a href="http://jsoup.org/cookbook/extracting-data/selector-syntax">zde</a>.
+jtaAnalyzerStep3Description.text=Zde vytvo\u0159te pravidla pro extrakci produktu. Je mo\u017en\u00e9 pou\u017e\u00edvat syntaxi CSS nebo JQuery selektor\u016f.\nJejich p\u0159ehled naleznete na <b>http://jsoup.org/cookbook/extracting-data/selector-syntax</b>
 jtaAnalyzerStep3Description.contentType=text/html
 jtfAnalyzerStep3Url.text=http://
 jlbAnalyzerStep3Url.text=URL:
