Implemented CaseResolver and ExtractionResolver + gui support

--- a/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
+++ b/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
@@ -117,3 +117,7 @@ jlbAnalyzerStep3ProductPriceDPH.text=Cena s DPH:
 jlbAnalyzerStep3ProductName.font=Ubuntu-Bold-15
 #NOI18N
 jlbAnalyzerStep3ProductPrice.font=Ubuntu-Bold-15
+jlbAnalyzerStep3Preview.text=N\u00e1hled:
+previewProductExtracting.Action.text=
+previewProductExtracting.Action.shortDescription=
+jepAnalyzerStep3Preview.contentType=text/html
