Added type and producer fields to Product

--- a/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
+++ b/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
@@ -121,3 +121,7 @@ jlbAnalyzerStep3Preview.text=N\u00e1hled:
 previewProductExtracting.Action.text=
 previewProductExtracting.Action.shortDescription=
 jepAnalyzerStep3Preview.contentType=text/html
+jtfAnalyzerStep3ProductType.text=
+jtfAnalyzerStep3ProductProducer.text=
+jlbAnalyzerStep3ProductProducer.text=V\u00fdrobce:
+jlbAnalyzerStep3ProductType.text=Typ:
