Saving settings to properties

--- a/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
+++ b/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
@@ -125,3 +125,20 @@ jtfAnalyzerStep3ProductType.text=
 jtfAnalyzerStep3ProductProducer.text=
 jlbAnalyzerStep3ProductProducer.text=V\u00fdrobce:
 jlbAnalyzerStep3ProductType.text=Typ:
+jpSettings.TabConstraints.tabTitle=Nastaven\u00ed
+jPanel1.border.title=Datab\u00e1ze
+jlbSettingsHost.text=Host:
+jlbSettingsPort.text=Port:
+jlbSettingsDatabase.text=Datab\u00e1ze:
+jlbSettingsUsername.text=U\u017eivatelsk\u00e9 jm\u00e9no:
+jlbSettingsPassword.text=Heslo:
+jtfSettingsHost.text=
+jtfSettingsPort.text=
+jtfSettingsDatabase.text=
+jtfSettingsUsername.text=
+jButton1.text=Ulo\u017eit
+SaveSettingsToProperties.Action.text=
+SaveSettingsToProperties.Action.shortDescription=
+saveSettingsToProperties.Action.text=
+saveSettingsToProperties.Action.shortDescription=
+jpfSettingsPassword.text=
