Refactored loading of crawled domains

--- a/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
+++ b/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
@@ -110,7 +110,7 @@ jlbAnalyzerStep3Url.text=URL:
 jtfAnalyzerStep3Preview.text=N\u00e1hled
 jtfAnalyzerStep3PreviewDescription.text=Zobraz\u00ed n\u00e1hled vyextrahovan\u00fdch v\u00fdsledk\u016f
 jTextArea1.text=text\ntext
-jlbAnalyzerStep1Sample.text=Na\u010d\u00edst vzorov\u00e1 pravidla
+jlbAnalyzerStep1Sample.text=Vzorov\u00e1 pravidla:
 jtfAnalyzerStep3ProductPriceDPH.text=
 jlbAnalyzerStep3ProductPriceDPH.text=Cena s DPH:
 #NOI18N
@@ -142,3 +142,7 @@ SaveSettingsToProperties.Action.shortDescription=
 saveSettingsToProperties.Action.text=
 saveSettingsToProperties.Action.shortDescription=
 jpfSettingsPassword.text=
+jLabel1.text=Ulo\u017een\u00e9 dom\u00e9ny:
+jButton2.text=obnovit
+initAnalyzerDomainsToAnalyze.Action.text=
+initAnalyzerDomainsToAnalyze.Action.shortDescription=
