Settings refactored to use Preferences API

--- a/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
+++ b/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
@@ -146,3 +146,5 @@ jLabel1.text=Ulo\u017een\u00e9 dom\u00e9ny:
 jButton2.text=obnovit
 initAnalyzerDomainsToAnalyze.Action.text=
 initAnalyzerDomainsToAnalyze.Action.shortDescription=
+saveSettings.Action.text=
+saveSettings.Action.shortDescription=
