--- a/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
+++ b/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
@@ -143,8 +143,14 @@ saveSettingsToProperties.Action.text=
 saveSettingsToProperties.Action.shortDescription=
 jpfSettingsPassword.text=
 jLabel1.text=Ulo\u017een\u00e9 dom\u00e9ny:
-jButton2.text=obnovit
 initAnalyzerDomainsToAnalyze.Action.text=
 initAnalyzerDomainsToAnalyze.Action.shortDescription=
 saveSettings.Action.text=
 saveSettings.Action.shortDescription=
+#NOI18N
+jtaAnalyzerConsole.foreground=166, 184, 24
+#NOI18N
+jtaAnalyzerConsole.font=Ubuntu-Plain-12
+#NOI18N
+jtaAnalyzerConsole.background=61, 102, 59
+jbtAnalyzerStep1LoadDomains.text=obnovit
