Product extraction + some fixes around

--- a/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
+++ b/src/main/resources/com/github/mefi/jkuuza/gui/resources/AppView.properties
@@ -76,7 +76,7 @@ nextAnalyzerStep.Action.shortDescription=
 nextAnalyzerStep.Action.text=
 jbtAnalyzerStepPrev.toolTipText=Krok zp\u011bt
 jbtAnalyzerStepNext.toolTipText=N\u00e1sleduj\u00edc\u00ed krok
-jtaAnalyzerStep2TopDescription.text=Zde vytvo\u0159te pravidla pro detekci dokument\u016f. Dokument mus\u00ed splnit v\u0161echna pravidla, aby byl p\u0159ed\u00e1n k extrahov\u00e1n\u00ed obsahu.
+jtaAnalyzerStep2TopDescription.text=Zde vytvo\u0159te podm\u00ednky pro detekci dokument\u016f. Dokument je mus\u00ed splnit v\u0161echny, aby byl p\u0159ed\u00e1n k extrakci obsahu.
 jbtAnalyzerStep2TopAddComponent.text=P\u0159idat
 addNextReflectorComponent.Action.text=
 addNextReflectorComponent.Action.shortDescription=
@@ -109,8 +109,6 @@ jtfAnalyzerStep3Url.text=http://
 jlbAnalyzerStep3Url.text=URL:
 jtfAnalyzerStep3Preview.text=N\u00e1hled
 jtfAnalyzerStep3PreviewDescription.text=Zobraz\u00ed n\u00e1hled vyextrahovan\u00fdch v\u00fdsledk\u016f
-jTextArea1.text=text\ntext
-jlbAnalyzerStep1Sample.text=Vzorov\u00e1 pravidla:
 jtfAnalyzerStep3ProductPriceDPH.text=
 jlbAnalyzerStep3ProductPriceDPH.text=Cena s DPH:
 #NOI18N
@@ -142,7 +140,6 @@ SaveSettingsToProperties.Action.shortDescription=
 saveSettingsToProperties.Action.text=
 saveSettingsToProperties.Action.shortDescription=
 jpfSettingsPassword.text=
-jLabel1.text=Ulo\u017een\u00e9 dom\u00e9ny:
 initAnalyzerDomainsToAnalyze.Action.text=
 initAnalyzerDomainsToAnalyze.Action.shortDescription=
 saveSettings.Action.text=
@@ -154,3 +151,18 @@ jtaAnalyzerConsole.font=Ubuntu-Plain-12
 #NOI18N
 jtaAnalyzerConsole.background=61, 102, 59
 jbtAnalyzerStep1LoadDomains.text=obnovit
+jtaAnalyzerStep1Description.text=V tomto kroku vyberte dom\u00e9nu k anal\u00fdze. Pokud nejsou \u017e\u00e1dn\u00e9 dom\u00e9ny nalezeny, st\u00e1hn\u011bte je nejprve pomoc\u00ed Crawleru.
+jlbAnalyzerStep1DomainsToAnalyze.text=Ulo\u017een\u00e9 dom\u00e9ny:
+jlbAnalyzerStep1SampleConditions.text=Vzorov\u00e1 pravidla:
+jlbAnalyzerStep4CountOfExtractedLabel.text=Nalezeno produkt\u016f:
+jlbAnalyzerStep4CountOfExtractedValue.text=0
+jlbAnalyzerStep4CountOfProcessedLabel.text=Zpracov\u00e1no:
+jlbAnalyzerStep4CountOfProcessedValue.text=0
+jlbAnalyzerStep4CountOfTotal.text=0
+jlbAnalyzerStep4Slash.text=/
+jlbCrawlerResolvedQueriesCount.text=0
+jlbCrawlerOutstandingQueries.text=0
+jlbCrawlerResolvedQueriesCountLabel.text=Zpracovan\u00e9:
+jlbCrawlerOutstandingQueriesLabel.text=V procesu:
+jlbCrawlerUnprocessedQueriesLabel.text=\u010cekaj\u00edc\u00ed:
+jlbCrawlerUnprocessedQueries.text=0
